<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    tools:context=".controller.Login">

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="10dp"
        android:layout_marginStart="10dp">

        <EditText
            android:id="@+id/login_edtxt_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/cadastroConta_edtxt_email"
            android:inputType="textEmailAddress" />

    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="10dp"
        android:layout_marginStart="10dp">

        <EditText
            android:id="@+id/login_edtxt_senha"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/cadastroConta_edtxt_senha"
            android:inputType="textPassword" />

    </android.support.design.widget.TextInputLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="10dp"
        android:layout_marginStart="10dp">

        <Button
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/cadastroConta_btn_cancelar"
            style="?android:buttonBarButtonStyle"
            android:onClick="cancelar"/>

        <Button
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/cadastroConta_btn_finalizar"
            style="?android:buttonStyle"
            android:onClick="finalizar"/>

    </LinearLayout>

</LinearLayout>